@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgrepotool,v 1.3 2007/02/28 19:22:20 mej Exp $
+# $Id: pkgrepotool,v 1.4 2007/05/21 23:14:54 mej Exp $
 #
 
 use strict;
@@ -41,99 +41,6 @@ my $config;
 
 my @config_vars = ("DEBUG", "DIRS", "INTERACTIVE", "NEWEST", "OLD",
                    "OLDEST", "SCM", "SPAN", "TEST");
-
-# Get only the newest packages
-sub
-filter_newest($)
-{
-    my $scan = $_[0];
-
-    foreach my $dir (sort(keys(%{$scan}))) {
-        my %pkgs;
-
-        # Build hash of package name -> array of RPM's
-        foreach my $pkg (sort(keys(%{$scan->{$dir}}))) {
-            push @{$pkgs{$scan->{$dir}{$pkg}{"NAME"}}}, $pkg;
-        }
-
-        # For each unique package, pick only the newest one.
-        foreach my $pkg (sort(keys(%pkgs))) {
-            my @rpms = reverse(&rpm_sort(@{$pkgs{$pkg}}));
-
-            shift @rpms;
-            foreach my $rpm (@rpms) {
-                delete $scan->{$dir}{$rpm};
-            }
-        }
-    }
-    return $scan;
-}
-
-# Get only the oldest packages
-sub
-filter_oldest($)
-{
-    my $scan = $_[0];
-
-    foreach my $dir (sort(keys(%{$scan}))) {
-        my %pkgs;
-
-        # Build hash of package name -> array of RPM's
-        foreach my $pkg (sort(keys(%{$scan->{$dir}}))) {
-            push @{$pkgs{$scan->{$dir}{$pkg}{"NAME"}}}, $pkg;
-        }
-
-        # For each unique package, pick only the oldest one.
-        foreach my $pkg (sort(keys(%pkgs))) {
-            my @rpms = &rpm_sort(@{$pkgs{$pkg}});
-
-            shift @rpms;
-            foreach my $rpm (@rpms) {
-                delete $scan->{$dir}{$rpm};
-            }
-        }
-    }
-    return $scan;
-}
-
-# Get only old packages (exact opposite of newest)
-sub
-filter_old($)
-{
-    my $scan = $_[0];
-
-    foreach my $dir (sort(keys(%{$scan}))) {
-        my %pkgs;
-
-        # Build hash of package name -> array of RPM's
-        foreach my $pkg (sort(keys(%{$scan->{$dir}}))) {
-            push @{$pkgs{$scan->{$dir}{$pkg}{"NAME"}}}, $pkg;
-        }
-
-        # For each unique package, pick only the old one.
-        foreach my $pkg (sort(keys(%pkgs))) {
-            my @rpms = reverse(&rpm_sort(@{$pkgs{$pkg}}));
-
-            delete $scan->{$dir}{shift @rpms};
-        }
-    }
-    return $scan;
-}
-
-# Merge all repositories into one
-sub
-span_dirs($)
-{
-    my $scan = $_[0];
-
-    foreach my $dir (keys(%{$scan})) {
-        foreach my $pkg (keys(%{$scan->{$dir}})) {
-            $scan->{'-'}{$pkg} = $scan->{$dir}{$pkg};
-        }
-        delete $scan->{$dir};
-    }
-    return $scan;
-}
 
 # Print usage information
 sub
@@ -173,6 +80,121 @@ print_usage_info
     exit(MEZZANINE_SUCCESS);
 }
 
+sub
+get_newest(@)
+{
+    my @rpms = @_;
+
+    @rpms = reverse(&rpm_sort(@rpms));
+    return ((wantarray()) ? (@rpms) : ($rpms[0]));
+}
+
+sub
+get_oldest(@)
+{
+    my @rpms = @_;
+
+    @rpms = &rpm_sort(@rpms);
+    return ((wantarray()) ? (@rpms) : ($rpms[0]));
+}
+
+# Build hash of package name -> array of RPM's
+sub
+build_package_hash($)
+{
+    my $scan = $_[0];
+    my $pkgs;
+
+    foreach my $dir (sort(keys(%{$scan}))) {
+        foreach my $pkg (sort(keys(%{$scan->{$dir}}))) {
+            push @{$pkgs->{$scan->{$dir}{$pkg}{"NAME"}}}, $pkg;
+        }
+    }
+    return $pkgs;
+}
+
+# Get only the newest packages
+sub
+filter_newest($)
+{
+    my $scan = $_[0];
+    my $pkgs;
+
+    $pkgs = &build_package_hash($scan);
+
+    # For each unique package, keep only the newest one.
+    foreach my $pkg (sort(keys(%{$pkgs}))) {
+        my @rpms = &get_newest(@{$pkgs->{$pkg}});
+
+        shift @rpms;
+        foreach my $dir (sort(keys(%{$scan}))) {
+            foreach my $rpm (@rpms) {
+                delete $scan->{$dir}{$rpm};
+            }
+        }
+    }
+    return $scan;
+}
+
+# Get only the oldest packages
+sub
+filter_oldest($)
+{
+    my $scan = $_[0];
+    my $pkgs;
+
+    $pkgs = &build_package_hash($scan);
+
+    # For each unique package, keep only the oldest one.
+    foreach my $pkg (sort(keys(%{$pkgs}))) {
+        my @rpms = &get_oldest(@{$pkgs->{$pkg}});
+
+        shift @rpms;
+        foreach my $dir (sort(keys(%{$scan}))) {
+            foreach my $rpm (@rpms) {
+                delete $scan->{$dir}{$rpm};
+            }
+        }
+    }
+    return $scan;
+}
+
+# Get only old packages (exact opposite of newest)
+sub
+filter_old($)
+{
+    my $scan = $_[0];
+    my $pkgs;
+
+    $pkgs = &build_package_hash($scan);
+
+    # For each unique package, pick only the old one.
+    foreach my $pkg (sort(keys(%{$pkgs}))) {
+        my @rpms = &get_newest(@{$pkgs->{$pkg}});
+        my $newest_rpm = shift @rpms;
+
+        foreach my $dir (sort(keys(%{$scan}))) {
+            delete $scan->{$dir}{$newest_rpm};
+        }
+    }
+    return $scan;
+}
+
+# Merge all repositories into one
+sub
+span_dirs($)
+{
+    my $scan = $_[0];
+
+    foreach my $dir (keys(%{$scan})) {
+        foreach my $pkg (keys(%{$scan->{$dir}})) {
+            $scan->{'-'}{$pkg} = $scan->{$dir}{$pkg};
+        }
+        delete $scan->{$dir};
+    }
+    return $scan;
+}
+
 # main() here is basically the same as main() in C
 sub
 main
@@ -199,7 +221,7 @@ main
     if ($OPTION{"version"}) {
         # Do not edit this.  It is updated automatically by CVS when you commit.
         &print_version($PROGNAME, $VERSION, "Michael Jennings",
-                       'CVS Revision $Revision: 1.3 $ created on $Date: 2007/02/28 19:22:20 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.4 $ created on $Date: 2007/05/21 23:14:54 $ by $Author: mej $ ');
     } elsif ($OPTION{"help"} || (!scalar(@ARGV) && !scalar(%OPTION) && &basename($0) !~ /^mz/)) {
         &print_usage_info();
     }
@@ -231,7 +253,7 @@ main
     } elsif (($0 =~ /merge$/) || ($OPTION{"merge"})) {
         $mode = "merge";
     } else {
-        &fatal_error("Nothing to do!\n");
+        $mode = "scan";
     }
 
     # Get directory list from config, options, or command line.
