@@ -1050,3 +1050,8 @@ Wed May 16 15:05:58 2007                        Michael Jennings (mej)
 Fix for RHEL4's RPM version from Jason Corley <jason.corley@gmail.com>
 and fixed build arch.
 ----------------------------------------------------------------------
+Mon May 21 19:13:04 2007                        Michael Jennings (mej)
+
+Tweaks for rpm 4.4.9, new PHP extension template, reorg of
+pkgrepotool.
+----------------------------------------------------------------------
